evaluation-runs/541/k8s/prod/quotes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotes
  namespace: sme-app
  labels:
    app.kubernetes.io/name: quotes
    app.kubernetes.io/part-of: sme-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: quotes
  template:
    metadata:
      labels:
        app.kubernetes.io/name: quotes
        app.kubernetes.io/part-of: sme-app
    spec:
      containers:
        - name: quotes
          image: ralfx22/sme-quotes:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              protocol: TCP
